feat(config): ability to configure the badge colors
... and the location of the input / output

- to do so: use SpringBoot

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,6 +1,11 @@
-= Update the date of the badge
 
-== Generate the date
+= SnowCamp.io badges generation
+
+This program is used to generate the https://snowcamp.io/[Snowcamp.io] badges.
+
+== Update the date of the badge
+
+=== Generate the date
 
 . go to https://www.dafont.com/snowtop-caps.font?text=2019&psize=l
 . change the new date (eg 2019)
@@ -11,7 +16,7 @@
 .. map black to white
 .. export as png (eg 2019.png)
 
-== Update the badge model
+=== Update the badge model
 
 Use the file `src/main/resources/template-badge.svg.mustache`
 
@@ -26,7 +31,7 @@ Use the file `src/main/resources/template-badge.svg.mustache`
 IMPORTANT: the bagde size must be around 105x148mm so that after the
 printing and the cutting, the badges have a size of around 100x140 mm
 
-== Backport the svg to the model
+=== Backport the svg to the model
 
 `template-badge.svg.mustache` declares some mustache variables that will be
 injected by the https://mustache.github.io/[Mustache templating engine] but
@@ -36,12 +41,11 @@ you've generated with the mustache template.
 To do so, you can use Intellij (compare the two files) or whatever diff
 editor.
 
-
 1. backport the changes from `template-badge.svg` to `template-badge.svg.mustache`
 2. save the file
 
 
-== Change the color of the bottom band
+=== Change the color of the bottom band
 
 
 Every year, we change the color of the bottom band for:
@@ -50,11 +54,13 @@ Every year, we change the color of the bottom band for:
 * speakers
 * sponsors
 
-1. edit the config file `config.yaml`
+1. edit the config file `application.yaml`
 2. choose different html colors for them (don't touch the staff color)
 
 NOTE: we keep the same color for the staff.
 
-= Generate the badge
+== Generate the badge
 
-Just run the main of the `App` class.
+1. edit the config file `application.yaml` and change the value
+of `inputFile` to point to the csv file exported from Yurplan
+2. run the main of the `App` class
