--- a/README.asciidoc
+++ b/README.asciidoc
@@ -64,3 +64,7 @@ NOTE: we keep the same color for the staff.
 1. edit the config file `application.yaml` and change the value
 of `inputFile` to point to the csv file exported from Yurplan
 2. run the main of the `App` class
+
+NOTE: values that enables to distinguish between sponsors, speakers, staff
+and attendees must start with respectively: `Sponsor stand`, `Speaker` and
+`Staff`
